maj textes/img lundi

--- a/aide.html
+++ b/aide.html
@@ -66,6 +66,7 @@
                             <li><a href="avantages.html">FAQ</a></li>
                         </ul>
                     </li>
+                    </ul>
                     <li><a href="dons.html">Dons</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -114,6 +115,10 @@
                 </div>
             </div>
  <p align="left"> La socièté des amis soutient par ailleurs l'édition des <b>ouvrages</b> des<br>  chercheurs du Musée. C'est ce qu'elle vient de faire en aidant la publication <br> du livre de <b>Patrick Paillet</b>, maitre de conférence au Musée de l'Homme,<br> sur  "L'art des objets de la préhistoire." (Edition Errance 2014)</p>
+ <br>
+ <p>
+Pour plus d'informations sur les autres missions de la Société des amis , revenir au <a href="#">menu principal</a>.
+ </p>
         </div>
 
     </div>
