--- a/collections.html
+++ b/collections.html
@@ -102,6 +102,11 @@
 
                     </br>
 
+                      <p align="left">
+      Pour plus d'informations sur la troisième mission de la société des amis , revenir au <a href="#">menu principal</a>.
+    </p>
+
+
                 </div>
                 <div class="col-sm-6">
                     <div class="flexslider">
@@ -121,8 +126,6 @@
             </div>
         </div>
     </div>
-
-
 
 
     <!-- starts footer -->
