--- a/contact.html
+++ b/contact.html
@@ -78,8 +78,18 @@
             </div>
             <div class="row contact">
                 <p>
-                    Notre bureau est joignable au 01 47 04 62 10 du <b> lundi au vendredi </b>entre 10h et 18h.</p>
+                   Pour adhérer à la Société des amis ou poser toute question concernant ses activités, contactez nous. Par email à l'adresse <b>samh@mnhn.fr</b> ou téléphonez-nous au <b>01 47 04 62 10</b>. Si vous ne nous trouvez pas, laissez un message sur le répondeur en
+          donnant votre nom, votre numéro de téléphone et le motif de votre demande. Nous vous répondons dans les plus brefs délais.</p>
 
+  <p>
+  Si vous habitez dans la région de <b>Marseille </b>, adressez vous à
+  l'antenne Méditerranée : samh.med13@orange.fr ou par téléphone au 04 91 342 512</p>
+
+  <p>
+  Et si vous habitez dans la région de <b>Nantes</b>, adressez-vous à l'antenne Océanique :
+
+  info@samh-océanique.info ou au 06 58 58 99 95 </p>
+                   </p>
                 <form>
                     <div class="row form">
                         <div class="col-sm-6 row-col">
