--- a/dons.html
+++ b/dons.html
@@ -179,19 +179,15 @@ de ses chercheurs , frais de mission ou édition d'ouvrages. Votre générosité
                 <h3>Dons des particuliers</h3>
                  </div>
 
-<p>Les dons en argent effectués à la société de amis du Musée de l'Homme par des particuliers sont déductibles de leurs revenus. Le taux de déduction est de 66% dans la limite de 20% du revenu imposable. Si les dons excèdent cette limite, l'excédent est reporté successivement sur les cinq années suivantes et ouvre droit à une réduction du revenu imposable dans les mêmes conditions ? </p>
+<p>Les dons en argent effectués à la société de amis du Musée de l'Homme par des particuliers sont déductibles de leurs revenus. Le taux de déduction est de 66% dans la limite de 20% du revenu imposable. Si les dons excèdent cette limite, l'excédent est reporté successivement sur les cinq années suivantes et ouvre droit à une réduction du revenu imposable dans les mêmes conditions. </p>
 
-
-<p> Les dons en argent effectués à la société des amis du Musée de l'Homme  par des entreprises assujetties à l'impôt sur le revenu ou à l'impôt sur  les sociétés bénéficient , dans les conditions de la loi , d'une réduction d'impôt égale à 60% de leur montant dans la limite de 5/000 de  leur chiffre d'affaires . Si la limite fixée par les textes est  dépassée , l'excédent de versement peut donner lieu à réduction d'impôt au titre des cinq exercices suivants </p>
 
 <div class="section_header">
                 <h3>Dons des entreprises</h3>
                  </div>
 
-<p>Les dons en argent effectués à la société des amis du Musée de l'Homme par des entreprises assujetties à l'impôt sur le revenu ou à l'impôt sur les sociétés bénéficient, dans les conditions de la loi , d'une réduction d'impôt égale à 60% de leur montant dans la limite de 5/000 de leur chiffre d'affaires . Si la limite fixée par les textes est dépassée, l'excédent de versement peut donner lieu à réduction d'impôt au titre des cinq exercices suivants. </p>
+<p>Les dons en argent effectués à la société des amis du Musée de l'Homme par des entreprises assujetties à l'impôt sur les sociétés bénéficient, dans les conditions de la loi , d'une réduction d'impôt égale à 60% de leur montant dans la limite de 5/000 de leur chiffre d'affaires . Si la limite fixée par les textes est dépassée, l'excédent de versement peut donner lieu à réduction d'impôt au titre des cinq exercices suivants. </p>
 
-
-<p> Les dons en argent effectués à la société des amis du Musée de l'Homme  par des entreprises assujetties à l'impôt sur le revenu ou à l'impôt sur  les sociétés bénéficient , dans les conditions de la loi , d'une réduction d'impôt égale à 60% de leur montant dans la limite de 5/000 de  leur chiffre d'affaires . Si la limite fixée par les textes est  dépassée , l'excédent de versement peut donner lieu à réduction d'impôt au titre des cinq exercices suivants </p>
 
      <div id="service_1">
         <div class="container">
@@ -201,8 +197,8 @@ de ses chercheurs , frais de mission ou édition d'ouvrages. Votre générosité
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/55-33-2A.JPG">
-                                <img src="img/55-33-2A.JPG" width="290" height="190">
+                            <a href="img/attachment.jpg">
+                                <img src="img/attachment.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -262,11 +258,7 @@ de ses chercheurs , frais de mission ou édition d'ouvrages. Votre générosité
 </br>
 </br>
 
-<p> Si vous souhaitez faire de la société des amis du Musée de l'Homme votre
-légataire universel ou particulier , c'est à dire pour une partie de
-votre patrimoine , par exemple un ou plusieurs objets , ces dispositions
-doivent figurer dans un testament. Votre notaire vous aidera à rédiger
-ce texte. Nous sommes à votre disposition pour vous apporter notre concours et  pour répondre à
+<p> Si vous souhaitez faire de la société des amis du Musée de l'Homme votre légataire universel ou particulier , c'est à dire pour une partie de votre patrimoine, par exemple un ou plusieurs objets, ou une somme d'argent, ces dispositions doivent figurer dans un testament écrit. Votre notaire vous aidera à rédiger ce texte. Nous sommes à votre disposition pour vous apporter notre concours et  pour répondre à
 vos questions. <br><br> Contactez-nous au <b> 01 47 04 62 10 </b> </p>
             </div>
 
