--- a/avantages.html
+++ b/avantages.html
@@ -52,7 +52,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="paris.html">Socièté des Amis</a></li>
+                            <li><a href="paris.html">Bureau National</a></li>
                             <li><a href="marseille.html">Méditerranée</a></li>
                             <li><a href="nantes.html">Océanique</a></li>
                         </ul>
