--- a/histoire.html
+++ b/histoire.html
@@ -53,7 +53,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="paris.html">Socièté des Amis</a></li>
+                            <li><a href="paris.html">Bureau National</a></li>
                             <li><a href="marseille.html">Antenne Méditerranée</a></li>
                             <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
@@ -90,8 +90,6 @@
                       </br>
                       </br>
                         C'est Charles de Noailles qui succède à Paul Doumer en 1928 . Grand mécène, collectionneur d'art contemporain , ami des surréalistes , il assure le financement du film de Jean Cocteau , "le sang d'un poète ", et de celui de Luis Bunuel , " l'âge d'or " et commande à l'architecte Robert Mallet-Stevens la villa de Hyères qui porte son nom . Ami de Georges-Henri Rivière , il donne une forte impulsion à la société des amis , réunit de grands mécènes , collecte des dons , enrichit les collections du Musée et finance la mission Dakar-Djibouti de 1937 . Pendant cette  période de l'entre deux guerres , la société des amis va devenir le soutien économique indispensable d'un musée qui manque de moyens de fonctionnement . Elle  achète du mobilier , des livres , finance des dépenses de personnel ou encore des travaux d'aménagement comme ceux de la bibliothèque du Musée.
-
-                        photos : enlever yeux de Laura, inverser affiche 1 et 3, insérer en 2 Arts Primitifs
 
                       </br>
 <div id="service_1">
@@ -171,11 +169,11 @@
 
                       </br>
                       </br>
- Marie-Alice de Beaumarchais succède à Alix de Rothschild en 1978 et ,
- jusqu'en 1997 , va donner à la société des amis une nouvelle impulsion . Elle lance une campagne
- de recrutement , ouvre des antennes à Marseille , Bordeaux et Nantes et accroit fortement le nombre des adhérents , ce qui permet à la société des amis de soutenir toutes les
- expositions du Musée , d'acheter de nombreux objets ou encore de
- commander à Savignac la célèbre affiche " Allez au Musée de l'Homme " . Marie-Alice de Beaumarchais crée en 1989 une lettre d'information trimestrielle et développe les activités destinées aux adhérents , à Paris comme dans les antennes .
+ Marie-Alice de Beaumarchais succède à Alix de Rothschild en 1978 et,
+ jusqu'en 1997, va donner à la société des amis une nouvelle impulsion . Elle lance une campagne
+ de recrutement, ouvre des antennes à Marseille , Bordeaux et Nantes et accroit fortement le nombre des adhérents, ce qui permet à la société des amis de soutenir toutes les
+ expositions du Musée, d'acheter de nombreux objets ou encore de commander à Savignac la célèbre affiche " Allez au Musée de l'Homme ". Marie-Alice de Beaumarchais crée en 1989 une lettre d'information trimestrielle et développe les activités destinées aux adhérents , à Paris comme dans les antennes. En 1997, Marie-Alice de Beaumarchais quitte la présidence de la Société des amis. Elle est remplacée par Vincent Timothée, secrétaire général de l'association depuis 1978.
+
                       </p>
                 </div>
 
