--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="paris.html">Socièté des Amis</a></li>
+                            <li><a href="paris.html">Bureau National</a></li>
                             <li><a href="marseille.html">Antenne Méditerranée</a></li>
                             <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
@@ -109,13 +109,8 @@
             <div class= "row feature_wrapper">
                         </div>
                         <div id= "intro">
-                            <center><p> <font>La société des amis du Musée de l'Homme est une association reconnue.
- d'utilité publique dont le but est d'aider le Musée de l'Homme en
- soutenant le travail de ses chercheurs , en contribuant à
- l'enrichissement de ses collections et en l'aidant à développer ses
- activités. L'association qui possède deux antennes régionales , l'une à Marseille ,
- l'autre à Nantes ,organise pour ses membres des conférences , des visites
-  et des voyages culturels. </font> </p>
+                            <center><p> <font>La société des amis du Musée de l'Homme est une association reconnue d'utilité publique dont le but est d'aider le Musée de l'Homme en soutenant le travail de ses chercheurs, en contribuant à l'enrichissement de ses collections et en l'aidant à développer ses
+ activités. L'association qui possède deux antennes régionales , l'une à Marseille, l'autre à Nantes ,organise pour ses membres des conférences, des visites et des voyages culturels. </font> </p>
  </div>
 
                             </p> </center>
