--- a/paris.html
+++ b/paris.html
@@ -54,7 +54,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="paris.html">Socièté des Amis</a></li>
+                            <li><a href="paris.html">Bureau National</a></li>
                             <li><a href="marseille.html">Antenne Méditerranée</a></li>
                             <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
@@ -140,6 +140,15 @@
             <div class="section_header">
                 <h3>Activités du Bureau National </h3>
             </div>
+
+            <p> Pour les visites et voyages , merci de vous inscrire dès que possible
+auprès du secrétariat national de la Société des amis par
+email samh@mnhn.fr ou par téléphone au 01 47 04 62 10 et d'envoyer en
+même temps le règlement de votre inscription</p>
+
+  <br>
+  <br>
+
             <div class="row perk">
                 <div class="col-sm-2 circle circle1">
                 </div>
@@ -162,10 +171,27 @@
                 <div class="col-sm-10 description_wrapper">
                     <h5>Visites</h5>
                     <p>
-                  <b>L’INSTITUT DE LA VISION AUX QUINZE VINGTS</b> le mardi 27 janvier à 13h 45, visite guidée par le Professeur Alvaro RENDON.<br>
-                   <b> LA GRANDE GALERIE DE L’EVOLUTION</b> Jeudi 26 Mars à 19h30, visite guidée par Michel van PRAET
+                  <b> Lundi 9 novembre à 10 heures : le MUSEE DE L'HOMME. </b> visite de la
+galerie permanente rénovée , entrée gratuite sur présentation
+de la carte d'adhérent après inscription au secrétariat de la SAMHG.
+<br>
+                   <b> Jeudi 19 novembre à 10 heures : l'exposition SEPIK au musée du quai
+Branly.
+</b> Visite guidée par Christian COIFFIER, ancien maître de conférences
+au Musée de l'Homme , attaché au Muséum national d'histoire naturelle ,
+participation aux frais : 10 euros.<br>
+ <b> Mardi 1 décembre à 16 heures : l'HOTEL D'ESTREES.
+</b> résidence de l'Ambassadeur de la fédération de Russie , participation aux frais 10 euros.
+                        </p>
+                        <br>
+                        <p>34éme FESTIVAL DU FILM ETHNOGRAPHIQUE JEAN ROUCH </p>
 
-.                         </p>
+                        <b> Du 7 au 13 novembre, au Musée de l'Homme,</b> le Comité du film
+ethnographique organise son festival annuel consacré aux sociétés "humaines de tous les pays , à leurs réalités sociales et culturelles et à leurs relations avec l'environnement .
+
+Programme détaillé sur le site comitedufilmethnographique.com
+
+
                 </div>
             </div>
 
