--- a/marseille.html
+++ b/marseille.html
@@ -53,7 +53,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="paris.html">Socièté des Amis</a></li>
+                            <li><a href="paris.html">Bureau National</a></li>
                             <li><a href="marseille.html">Antenne Méditerranée</a></li>
                             <li><a href="nantes.html">Antenne Océanique</a></li>
                         </ul>
