--- a/marseille.html
+++ b/marseille.html
@@ -138,17 +138,24 @@
             <div class="section_header">
                 <h3>Activités de l'Antenne Méditerannée </h3>
             </div>
+ <p> Pour recevoir le programme détaillé des activités de l'antenne et pour
+vous inscrire , adressez-vous à Alix MARTIN , antenne Méditerranée de la SAMH, 48 boulevard Hugues, 13012 Marseille, téléphone 04 91 342 512 et samh.med13@orange.fr </p>
+<br>
+<br>
             <div class="row perk">
                 <div class="col-sm-2 circle circle1">
                 </div>
 
-                <div class="col-sm-10 description_wrapper">
-                    <h5>Voyages</h5>
-                    <p>
-                     <b>ROME ET SES ENVIRONS </b> : du 10 au 16 avril avec Gérard,DARSON.<br><br>
-                      Inscriptions s'adresser à Alix MARTIN, tél. 04 91 342 512, mail samh.med13@orange.fr
 
-. </p>
+                <div class="col-sm-10 description_wrapper">
+                    <h5>Visites et Voyages</h5>
+                    <p>
+                     <b>Mardi 22 septembre : le nouveau MARSEILLE, </b> le FRAC , les quartiers de la JOLIETTE et d'ARENC.<br>
+                       <b>Mercredi 28 octobre :</b> : LES BAUX et l'abbaye de MONTMAJOUR. <br>
+                       <b>Mardi 22 septembre : le nouveau MARSEILLE, </b> le FRAC , les quartiers de la JOLIETTE et d'ARENC.<br>
+                       <b>Mercredi 25 et jeudi 26 novembre </b> le MUSEE DE L'HOMME , la GRANDE GALERIE DE L'EVOLUTION et l'exposition GRANDS SINGES au Muséum national d'histoire naturelle<br><br>
+
+                        <b>Du lundi 18 au jeudi 21 janvier : </b> TURIN. </p>
                 </div>
             </div>
 
@@ -158,15 +165,15 @@
                 <br>
 
                 <div class="col-sm-10 description_wrapper">
-                    <h5>Visites</h5>
+                    <h5>Conférences</h5>
                     <p>
-                        <b> LE LUBERON, ANSOUIS ET LA TOUR D’AIGUES</b>: Samedi 31 Janvier <br> <br>
-                        <b>  LES PARFUMS A MOUANS-SARTOUX ET AU MUSEE DE GRASSE</b>: Mercredi 26 Mars </p>
+                        <b> Samedi 17 octobre au château de LOURMARIN, </b>avec l'Académie d'Aix , une
+journée de conférences TOUT AUTOUR DU VIN. <br>
+                        <b> Vendredi 20 novembre à ROUSSET, </b>conférences d'Alain GHIO chercheur au
+CNRS et de Joana REVIS directrice du centre de formation en orthophonie de Marseille sur LA VOIX, NOS CONNAISSANCES ET NOS PATHOLOGIES. </p> <br>
                 </div>
+
             </div>
-
-
-
             </div>
         </div>
     </div>
