--- a/nantes.html
+++ b/nantes.html
@@ -138,6 +138,10 @@
         <div class="container">
             <div class="section_header">
                 <h3>Activités de l'Antenne Océanique </h3>
+                <br>
+                <br>
+              <p>Pour recevoir le programme détaillé des activités de l'antenne et pour vous inscrire, adressez-vous à Patrice MORETTE-BOURNY, antenne océanique de la SAMH, 50 rue de la Bernerie 44210 PORNIC, téléphone 0658 58 99 95 et info@samh-oceanique.info  </p>
+
             </div>
             <div class="row perk">
                 <div class="col-sm-2 circle circle1">
@@ -146,14 +150,27 @@
                 <div class="col-sm-10 description_wrapper">
                     <h5>Voyages</h5>
                     <p>
-                        <b>MALTE </b>: Fin Septembre (dates à préciser). <br><br>
+                      <br>
+                        <b>Du mardi 29 septembre au mardi 6 octobre :</b> MALTE <br>
+                      </p>
 
-                        <b>Inscriptions</b> s'adresser à Patrice MORETTE-BOURNY, tél. 06 58 58 99 95
- mail info@samh-oceanique.info
+                </div>
+            </div>
 
+
+            <div class="row perk">
+                <div class="col-sm-2 circle">
+                </div>
+            <div class="col-sm-10 description_wrapper">
+                    <h5>Expositions</h5>
+                    <br>
+                    <p>
+                        <b>Du mercredi 29 Octobre au dimanche 15 novembre</b>, dans la chapelle de
+l'hôpital de PORNIC, DAME NATURE ET DAME CULTURE : LA BEAUTE DANS LA PREHISTOIRE, photographies de Claire ARTEMYZ <br><br>
                       </p>
                 </div>
             </div>
+
 
             <div class="row perk">
                 <div class="col-sm-2 circle">
@@ -161,11 +178,11 @@
 
                 <div class="col-sm-10 description_wrapper">
                     <h5>Visites</h5>
+                    <br>
                     <p>
-                        <b> LE MUSEE D’HISTOIRE DE LA VILLE DE NANTES AU CHÂTEAU DES DUCS DE BRETAGNE : </b> Jeudi 19 Février (horaire à confirmer) <br><br>
-
-                        <b> - LE MUSEE DES PAYS DE RETZ :</b> En Avril (date et horaire à préciser).
-
+                        <b> Mercrdi 25 et jeudi 26 novembre : LE MUSEE DE L'HOMME,</b> la GRANDE
+GALERIE DE L'EVOLUTION et l'exposition GRANDS SINGES au Muséum
+national d'histoire naturelle.
                       </p>
                 </div>
             </div>
