--- a/paris.html
+++ b/paris.html
@@ -156,10 +156,14 @@ même temps le règlement de votre inscription</p>
                 <div class="col-sm-10 description_wrapper">
                     <h5>Voyages</h5>
                     <p>
-                     <b>CUBA</b> : Du 6 au 16 Mars 2015<br>
-                      <b>L'ARDECHE</b> avec un fac-smile de la grotte chauvet : Du 29 au 31 Mars 2015<br>
-                      <b>CHYPRE</b> : Du 20 au 26 Septembre 2015<br>
-. </p>
+                     <b>Dans la première quinzaine d'avril 2016</b> : L'IRAN.<br>
+                      <b>Du 20 au 22 mai 2016 : </b> TAUTAVEL ET SA REGION avec Anne-Marie MOIGNE,
+maître de conférences au MNHN. <br>
+                      <b>Les 4 et 5 juin 2016 </b> : L'ARDECHE avec des visites du fac similé de la
+grotte Chauvet et du site d'ORGNA. <br>
+<b>Du 19 au 24 septembre 2016  </b> : LES VILLES HANSEATIQUES. <br>
+</p>
+
             </div>
             </div>
 
@@ -186,10 +190,30 @@ participation aux frais : 10 euros.<br>
                         <br>
                         <p>34éme FESTIVAL DU FILM ETHNOGRAPHIQUE JEAN ROUCH </p>
 
-                        <b> Du 7 au 13 novembre, au Musée de l'Homme,</b> le Comité du film
-ethnographique organise son festival annuel consacré aux sociétés "humaines de tous les pays , à leurs réalités sociales et culturelles et à leurs relations avec l'environnement .
+                        <b> Du 7 au 13 novembre, au Musée de l'Homme,</b>  le Comité du film
+ethnographique organise son festival annuel consacré aux sociétés "humaines de tous les pays , à leurs réalités sociales et culturelles et à leurs relations avec l'environnement. Programme détaillé sur le site <a href="http://comitedufilmethnographique.com/">comitedufilmethnographique.com </a>
+<br>
+<br>
+  <p> MANIFESTATIONS LIEES A LA COP 21</p>
+A l'occasion de l'organisation à Paris de la conférence COP 21 sur le
+climat , le Musée de l'Homme organise plusieurs manifestations sur ce
+théme :
+<br>
+<b> Du 4 novembre au 4 janvier</b> : une exposition de l'agence MAGNUM : WE HAVE
+THE POWER
+<br>
+<b>Le mercredi 4 et le jeudi 5 novembre</b> : un colloque scientifique CLIMAT
+ET DIVERSITE A L ERE DE L ATHROPOCENE
+<br>
+<b>Le samedi 21 novembre</b> : DEVENIR TERRIENS , un dialogue avec 75 experts
+<br>
+<b>Le samedi 28 novembre</b> : une séance spéciale du Comité du film
+ethnographique sur le réchauffement climatique
+<br>
+<br>
+Pour plus de renseignements, consultez les sites <a href="http://www.mnhn.fr/fr">mnhn.fr</a> et
+<a href="http://www.museedelhomme.fr/">museedelhomme.fr</a>
 
-Programme détaillé sur le site comitedufilmethnographique.com
 
 
                 </div>
@@ -207,7 +231,7 @@ Programme détaillé sur le site comitedufilmethnographique.com
                         Des rendez-vous avec les chercheurs du <b>Museum d'Histoire Naturelle.</b><br>
 
               Demander le <b>programme</b> auprès du secrétariat de la Société des Amis par :
-e-mail : samh@mnhn.fr  ou téléphone : 01 47 04 62 10. </p>
+e-mail : samh@mnhn.fr  ou téléphone : <br> 01 47 04 62 10. </p>
                 </div>
             </div>
         </div>
