--- a/tarifs.html
+++ b/tarifs.html
@@ -224,12 +224,22 @@
                     <div class="box">
                         <p class="title">Entrée gratuite</p>
                         <p class="answ">
-                            <b>Entrée gratuite</b> au Muséum national d'Histoire naturelle, la grande galerie de l'évolution et son exposition temporaire, la galerie de paléontologie et d'anatomie comparée et le cabinet d'histoire. </p>
+                            <b>Entrée gratuite</b> au Musée d l'Homme, galerie permanente et exposition
+                            temporaire. </p>
                     </div>
                     <div class="box">
                         <p class="title">Entrée à tarif réduit</p>
                         <p class="answ">
-                            Entrée à tarif réduit</b> dans les autres sites du Jardin des plantes, arboretum de Chèvreloup, parc zoologique d'Azay-le-Ferron, laboratoire maritime de Dinard, Harmas de Fabre, jardin exotique de Menton.</p>
+                            Entrée à tarif réduit</b> dans tous les établissements du Muséum national
+                          d'histoire naturelle à l'exception du parc zoologique de Paris.</p>
+                    </div>
+
+                    <br>
+
+                    <div class="box">
+                        <p class="title">Achats à la librairie du Musée</p>
+                        <p class="answ">
+                            Une <b>réduction</b> de 5%.</p>
                     </div>
 
                 </div>
