footer sites partenaires

--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                     <div class="row social">
                         <div class="col-md-12">
                             <a href="http://www.museedelhomme.fr/">Site du Musée de l'Homme</a>
-                            <a href="http://www.mnhn.fr/fr">Muséum National d'Histoire Naturelle</a>
-                            <a href="http://www.amis-musees.fr/">Les Amis de Musées </a>
+                            <a href="http://www.mnhn.fr/fr">Site Muséum National d'Histoire Naturelle</a>
+                            <a href="http://www.amis-musees.fr/">Site Les Amis de Musées </a>
 
 
                         </div>
