--- a/avantages.html
+++ b/avantages.html
@@ -179,7 +179,7 @@
     <!-- Bulletin  -->
     <div class="start">
                 <p>Rejoignez-nous dés maintenant ! </p>
-                <a href="avantages.html">Bulletin d'inscription</a>
+                <a href="PDF/Test_doc.pdf">Bulletin d'inscription</a>
             </div>
         </div>
     </div>
