--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
             <div class="start">
                 <p>Rejoignez-nous dés maintenant ! </p>
-                <a href="avantages.html">Adhérez </a>
+                <a href="PDF/Test_doc.pdf">Adhérez </a>
             </div>
         </div>
     </div>
