new home ing new logo

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         -->
 
 
-        <article class="slide" style="background: url('img/backgrounds/new_SAMH_home.jpg') repeat-x top center;">
+        <article class="slide" style="background: url('img/backgrounds/new_home_samh.jpg') repeat-x top center;">
 
         </article>
 
@@ -52,7 +52,7 @@
   </div>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle pull-right" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only">Navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
