--- a/nantes.html
+++ b/nantes.html
@@ -81,8 +81,8 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/marseille_112271 Apollonia.JPG">
-                                <img src="img/marseille_112271 Apollonia.JPG" width="290" height="190">
+                            <a href="img/Le_peuplement_humain_de_la_Terre_par_Yves_Coppens.jpeg">
+                                <img src="img/Le_peuplement_humain_de_la_Terre_par_Yves_Coppens.jpeg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -90,7 +90,7 @@
                         </div>
                         <div class="text">
                             <h6></h6>
-                            <p><b>Italie 1 999</b></p> <p>Crédits Photo : Jaques Prévost</p>
+                            <p><b>Conférence d'Yves Coppens sur le peuplement de la Terre.</b></p> <p>Crédits Photo : Jaques Prévost</p>
                         </div>
 
                     </div>
@@ -98,8 +98,8 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/032120 Vulcano.jpg">
-                                <img src="img/032120 Vulcano.jpg" width="290" height="190">
+                            <a href="img/Ouessant_R.jpeg">
+                                <img src="img/Ouessant_R.jpeg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -107,7 +107,7 @@
                         </div>
                         <div class="text">
                             <h6></h6>
-                            <p><b>Italie 1 999</b></p> <p>Crédits Photo : Jaques Prévost</p>
+                            <p><b>Maillezais</b></p> <p>Crédits Photo : Jaques Prévost</p>
                         </div>
 
                     </div>
@@ -115,8 +115,8 @@
                 <div class="col-sm-4">
                     <div class="feature last">
                         <div class="img_box">
-                            <a href="img/981033 Saquisili.jpg">
-                                <img src="img/981033 Saquisili.jpg" width="290" height="190">
+                            <a href="img/Maillezais_R.jpeg">
+                                <img src="img/Maillezais_R.jpeg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -124,7 +124,7 @@
                         </div>
                         <div class="text">
                             <h6></h6>
-                            <p><b>Italie 1 999</b></p> <p>Crédits Photo : Jaques Prévost</p>
+                            <p><b>Ouessant</b></p> <p>Crédits Photo : Jaques Prévost</p>
                         </div>
 
                     </div>
