--- a/nantes.html
+++ b/nantes.html
@@ -98,8 +98,8 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/Ouessant_R.jpeg">
-                                <img src="img/Ouessant_R.jpeg" width="290" height="190">
+                            <a href="img/Ouessant_R.jpg">
+                                <img src="img/Ouessant_R.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
@@ -115,8 +115,8 @@
                 <div class="col-sm-4">
                     <div class="feature last">
                         <div class="img_box">
-                            <a href="img/Maillezais_R.jpeg">
-                                <img src="img/Maillezais_R.jpeg" width="290" height="190">
+                            <a href="img/Maillezais_R.jpg">
+                                <img src="img/Maillezais_R.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
