--- a/nantes.html
+++ b/nantes.html
@@ -81,8 +81,8 @@
                 <div class="col-sm-4">
                     <div class="feature">
                         <div class="img_box">
-                            <a href="img/Le_peuplement_humain_de_la_Terre_par_Yves_Coppens.jpeg">
-                                <img src="img/Le_peuplement_humain_de_la_Terre_par_Yves_Coppens.jpeg" width="290" height="190">
+                            <a href="img/Yves_Coppens.jpg">
+                                <img src="img/Yves_Coppens.jpg" width="290" height="190">
                                 <span class="circle">
                                     <span class="plus">&#43;</span>
                                 </span>
