--- a/avantages.html
+++ b/avantages.html
@@ -92,12 +92,13 @@
                     <div class="box">
                         <p class="title"> Si j'adhère en septembre d'une année , mon règlement est-il valable pour l'année suivante ? </p>
                         <p class="answ">
-                            There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+                            Oui , votre cotisation est valable pour le dernier trimestre de l'année
+                            en cours et pour l'année suivante.</p>
                     </div>
                     <div class="box">
-                        <p class="title">Is there a discount for yearly service?</p>
+                        <p class="title">Si je souhaite que mon conjoint bénéficie des avantages que procure l'adhésion à la SAMH , dis-je adhérer et donc cotiser pour deux personnes ?</p>
                         <p class="answ">
-                            There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+                            Oui , il faut dans ce cas prendre le tarif duo.</p>
                     </div>
                 </div>
 
@@ -105,12 +106,13 @@
                     <div class="box">
                         <p class="title">Si je suis adhérent à Marseille, ou à Nantes, est-ce que je peux participer à une visite organisée à Paris ? </p>
                         <p class="answ">
-                            There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+                            Oui , à condition de vous inscrire au préalable auprès du secrétariat de
+                            la SAMH par email ou par téléphone.</p>
                     </div>
                     <div class="box">
-                        <p class="title">Is there a discount for yearly service?</p>
+                        <p class="title">Si j'habite Paris ou dans une région qui ne possède pas d'antenne, puis-je faire un voyage avec l'antenne Méditerranée ou l'antenne Atlantique ?</p>
                         <p class="answ">
-                            There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+                            Oui, à condition de vous inscrire auprès de l'antenne concernée.</p>
                     </div>
                 </div>
             </div>
