--- a/soutien.html
+++ b/soutien.html
@@ -93,7 +93,7 @@
                     <div class="flexslider">
                         <ul class="slides">
                            <li>
-                              <img src="img/chefsdoeuvresduMH.jpg" width="220" height="550">
+                              <img src="img/korrigane1.png" width="220" height="550">
                             </li>
                             <li>
                               <img src="img/origines.jpg" width="200" height="550">
